# py2deb

./: .gitignore  README.md  pyproject.toml
debian/: changelog  control  postinst  postrm  rules
src/py2deb/: __init__.py
