[project]
name = "py2deb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "robobe", email = "robobe2020@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.3.0",
]
